# cern_ts_two

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github-actions.yml
src/tsa_two/: __main__.py  cli.py
src/tsa_two/dependency_resolver/: exceptions.py  formatters.py  resolver.py
tests/: test_cli.py  test_formatters.py  test_parsejson.py  test_resolver.py
tests/data/: sample.json  sample_badjson.json  sample_badtype.json  sample_cycle.json  sample_undef.json
